<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IsCar</string>
    <string name="title_activity_pantalla_login">PantallaLogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">LOGIN</string>
    <string name="registro">REGISTRO</string>
    <string name="Test">TEST</string>
    <string name="USUARIO">Usuario: </string>
    <string name="tests">TESTS</string>
    <string name="BOTON_TEMARIOS">Temarios</string>
    <string name="SECCIONES">Secciones</string>
    <string name="SECCION">Sección</string>
    <string name="SECCION2">Sección: </string>
    <string name="seciones">SECCION</string>
    <string name="SECCION3">Resultados por secciónes</string>
    <string name="TEMAS">Temas</string>
    <string name="TEMA">Tema: </string>
    <string name="Info">INFO</string>
    <string name="Login">Login</string>
    <string name="Registro">Registro de usuario</string>
    <string name="PuntosTemas">Puntuacion por Temas</string>

    <string name="Temario">Temario</string>
    <string name="IsCar_Context_DES">Logo de IsCar</string>

    <string name="TEST">TEST</string>
    <string name="title_activity_tst">TstActivity</string>
    <string name="action_settings">Settings</string>
    <string name="preguntas">PREGUNTAS</string>
    <string name="respu" tools:ignore="ExtraTranslation">RESPUESTAS</string>
    <string name="title_activity_temario_test">temario_test_activity</string>
    <string name="title_activity_test">Activity_Test</string>
</resources>